--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/framework": "^6.2",
         "laravel/tinker": "^1.0",
         "laravel/ui": "^1.1",
+        "league/flysystem": "^1.0",
         "solarium/solarium": "^5.1"
     },
     "require-dev": {
