Just changed project name again :)

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-APP_NAME=Laravel
+APP_NAME="Laravel/Vue/Solarium/Opensolr Search"
 APP_ENV=local
 APP_KEY=base64:6FDINfBzxHv01TCm9inxz0BuKEXtrLrD0bQRwsRUTwE=
 APP_DEBUG=true
